Added demo front-end. Added in-progress integration test using Google Directions API